--- a/index.html
+++ b/index.html
@@ -4,15 +4,20 @@
     <meta name="viewport" content="width=device-width, user-scalable=yes, initial-scale=1, maximum-scale=1">
     <title>Demo</title>
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.0.1"></script>
-<script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/mobilenet@1.0.0"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/mobilenet@1.0.0"></script>
   </head>
   <body>
     <video playsinline autoplay></video>
-    <button>Take snapshot</button>
+    <button>Takeshot</button>
     <canvas></canvas>
-    <script>
-      video = document.querySelector('video');
-      canvas = document.querySelector('canvas');
+    <span></span>    
+     <script>
+    video = document.querySelector('video');
+    canvas = document.querySelector('canvas');
+    button = document.querySelector('button');
+    span = document.querySelector('span');
+
+
       canvas.width = 48;
       canvas.height = 48;
       canvas.style.filter = 'grayscale(1)';
@@ -30,6 +35,7 @@
         5: '😲', // surprise
         6: '😐' // neutral
       }
+
 async function predict() {
         const model = await tf.loadLayersModel('./model/model.json');
 
@@ -46,18 +52,28 @@ async function predict() {
 
         span.innerHTML = LABELS[i];
       }
+
+
+
+
     button.onclick = function() {
-        w = video.videoWidth;
+<!-- 여기 -->
+	w = video.videoWidth;
         h = video.videoHeight;
         s = Math.min(w, h);
         sx = (w-s)/2;
         sy = (h-s)/2;
-
-        canvas.getContext('2d').drawImage(video, sx=sx, sy=sy, swidth=s,
+	canvas.getContext('2d').drawImage(video, sx=sx, sy=sy, swidth=s,
           sheight=s, x=0, y=0, width=48, height=48);
-
-        span.innerHTML = '⌛';
+	
+	span.innerHTML = '⌛';
         predict();
+
+    };
+
+    constraints = {
+      audio: false,
+      video: true
     };
 
     function handleSuccess(stream) {
